# autoBilanceo

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: specs.mdc
src/autoBilanceo/: __init__.py  config.py
src/autoBilanceo/lib/: __init__.py  argparser.py  auth.py  auth_.py  contribuyentes.py  navigation.py  operations.py  setup.py
src/autoBilanceo/lib/services/: comprobantes.py
src/autoBilanceo/lib/services/comprobantes/: __init__.py  batch_processor.py  comprobantes.py  fill_invoice_issuance_data.py  input_handler.py  nav_to_invoice_generator.py  select_invoice_type.py  step1_nav_to_invoice_generator.py  step2_select_invoice_type.py  step3_fill_invoice_issuance_data.py  step3_fill_invoice_issuance_data_form.py  step4_fill_recipient_data.py  step4_fill_recipient_form.py  step5_fill_invoice_content_form.py  step6_generate_invoice.py  verify_rcel_page.py
src/autoBilanceo/lib/utils/: human_type.py
src/autoBilanceo/models/: cuit.py  invoice_content_services.py  invoice_currency.py  invoice_issuance_data.py  invoice_payment_methods.py  invoice_recipient_data.py  invoice_types.py
src/autoBilanceo/tests/: test_auth.py  test_service_comprobantes.py
src/autoBilanceo/tests/services/comprobantes/: test_batch_complete.py  test_batch_processing.py  test_fill_invoice_form_1.py  test_nav_to_generator.py  test_select_invoice_type.py  test_service_comprobantes.py  test_single_complete.py  test_single_processing.py  test_step1_nav_to_generator.py  test_step2_select_invoice_type.py  test_step3_fill_invoice_issuance_form.py  test_step4_fill_recipient_form.py  test_step5_fill_invoice_content_form.py
src/models/: invoice_types.py
